# authd

./: .gitignore  Cargo.toml  PKGBUILD  README.md  authd-pkexec.hook  authd-polkit-agent.service  authd.install  authd.service  deploy.sh
.github/workflows/: ci.yml
authctl/: Cargo.toml
authctl/src/: main.rs  pkexec_compat.rs
authd/: Cargo.toml
authd/src/: cache.rs  dialog.rs  main.rs  pam.rs  policy.rs
authsudo/: Cargo.toml
authsudo/src/: main.rs
escalate/: Cargo.toml
escalate/src/: lib.rs
etc/authd/policies.d/: gparted.toml
etc/pam.d/: authd
policy/: Cargo.toml
policy/src/: lib.rs  tests.rs
polkit-agent/: Cargo.toml
polkit-agent/src/: main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
