[package]
name = "authctl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
authd-protocol.workspace = true
serde.workspace = true
rmp-serde.workspace = true

[[bin]]
name = "authctl"
path = "src/main.rs"

[[bin]]
name = "pkexec"
path = "src/pkexec_compat.rs"
