[package]
name = "authd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
authd-protocol.workspace = true
authd-policy.workspace = true
peercred-ipc.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow = "1"
session-dialog = { path = "/home/osso/Projects/lib/session-dialog" }
