[package]
name = "authsudo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "authsudo"
path = "src/main.rs"

[dependencies]
authd-policy = { path = "../policy" }
authd-protocol = { path = "../protocol" }
peercred-ipc = { git = "https://github.com/Osso/peercred-ipc" }
libc = "0.2"
pam = "0.8"
rpassword = "7"
