[package]
name = "authd-escalate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Helper for auto-escalating to root/user via authsudo"

[dependencies]
nix = { version = "0.29", features = ["user"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
