[package]
name = "authd-polkit-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "polkit authentication agent backed by authd (spike)"

[[bin]]
name = "authd-polkit-agent"
path = "src/main.rs"

[dependencies]
authd-protocol.workspace = true
peercred-ipc.workspace = true
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { workspace = true }
anyhow = "1"
tracing.workspace = true
tracing-subscriber.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
